[gd_scene load_steps=5 format=4 uid="uid://dup47abikoe7"]

[ext_resource type="Script" uid="uid://dtjmak85vm4wl" path="res://scenes/main/main_menu.gd" id="1_sl1te"]
[ext_resource type="TileSet" uid="uid://dsygn4tps80p7" path="res://resources/tile_set.tres" id="2_5vafy"]
[ext_resource type="AudioStream" uid="uid://eccfsnc3imri" path="res://assets/audio/你干嘛电音.mp3" id="2_w6ykx"]
[ext_resource type="Texture2D" uid="uid://saec4v7mn5w3" path="res://scenes/main/鸡9.png" id="4_hiibk"]

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_sl1te")
music = ExtResource("2_w6ykx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAQAAAAAAAEAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAYAAAABAAQAAAAAAAcAAAACAAQAAAAAAAgAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAoAAAACAAQAAAAAAAsAAAAAAAQAAAAAAAwAAAABAAQAAAAAAA0AAAADAAQAAAAAAA4AAAAAAAQAAAAAAA8AAAAAAAQAAAAAABAAAAAAAAQAAAAAABEAAAADAAQAAAAAABIAAAAAAAQAAAAAABMAAAAAAAQAAAAAABQAAAAAAAQAAAAAABUAAAABAAQAAAAAABYAAAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAAAAAQAAAABAAIAAAAAAAQAAAABAAMAAAABAAQAAAABAAQAAAAAAAQAAAABAAUAAAAAAAQAAAABAAYAAAABAAQAAAABAAcAAAAAAAQAAAABAAgAAAAAAAQAAAABAAkAAAABAAQAAAABAAoAAAAAAAQAAAABAAsAAAACAAQAAAABAAwAAAAAAAQAAAABAA0AAAAAAAQAAAABAA4AAAAAAAQAAAABAA8AAAAAAAQAAAABABAAAAAAAAQAAAABABEAAAAAAAQAAAABABIAAAABAAQAAAABABMAAAAAAAQAAAABABQAAAAAAAQAAAABABUAAAAAAAQAAAABABYAAAADAAQAAAACAAAAAAAAAAQAAAACAAEAAAAAAAQAAAACAAIAAAAAAAQAAAACAAMAAAAAAAQAAAACAAQAAAAAAAQAAAACAAUAAAAAAAQAAAACAAYAAAABAAQAAAACAAcAAAAAAAQAAAACAAgAAAAAAAQAAAACAAkAAAABAAQAAAACAAoAAAAAAAQAAAACAAsAAAAAAAQAAAACAAwAAAAAAAQAAAACAA0AAAAAAAQAAAACAA4AAAAAAAQAAAACAA8AAAAAAAQAAAACABAAAAAAAAQAAAACABEAAAAAAAQAAAACABIAAAAAAAQAAAACABMAAAAAAAQAAAACABQAAAAAAAQAAAACABUAAAAAAAQAAAACABYAAAAAAAQAAAADAAAAAAAAAAQAAAADAAEAAAAAAAQAAAADAAIAAAAAAAQAAAADAAMAAAABAAQAAAADAAQAAAABAAQAAAADAAUAAAAAAAQAAAADAAYAAAAAAAQAAAADAAcAAAACAAQAAAADAAgAAAAAAAQAAAADAAkAAAAAAAQAAAADAAoAAAAAAAQAAAADAAsAAAAAAAQAAAADAAwAAAAAAAQAAAADAA0AAAAAAAQAAAADAA4AAAAAAAQAAAADAA8AAAAAAAQAAAADABAAAAAAAAQAAAADABEAAAAAAAQAAAADABIAAAAAAAQAAAADABMAAAAAAAQAAAADABQAAAAAAAQAAAADABUAAAAAAAQAAAADABYAAAABAAQAAAAEAAAAAAADAAQAAAAEAAEAAAABAAQAAAAEAAIAAAACAAQAAAAEAAMAAAAAAAQAAAAEAAQAAAABAAQAAAAEAAUAAAAAAAQAAAAEAAYAAAABAAQAAAAEAAcAAAAAAAQAAAAEAAgAAAAAAAQAAAAEAAkAAAAAAAQAAAAEAAoAAAAAAAQAAAAEAAsAAAADAAQAAAAEAAwAAAAAAAQAAAAEAA0AAAAAAAQAAAAEAA4AAAABAAQAAAAEAA8AAAAAAAQAAAAEABAAAAAAAAQAAAAEABEAAAABAAQAAAAEABIAAAAAAAQAAAAEABMAAAAAAAQAAAAEABQAAAABAAQAAAAEABUAAAAAAAQAAAAEABYAAAAAAAQAAAAFAAAAAAACAAQAAAAFAAEAAAABAAQAAAAFAAIAAAAAAAQAAAAFAAMAAAAAAAQAAAAFAAQAAAAAAAQAAAAFAAUAAAAAAAQAAAAFAAYAAAAAAAQAAAAFAAcAAAAAAAQAAAAFAAgAAAAAAAQAAAAFAAkAAAAAAAQAAAAFAAoAAAAAAAQAAAAFAAsAAAAAAAQAAAAFAAwAAAAAAAQAAAAFAA0AAAAAAAQAAAAFAA4AAAAAAAQAAAAFAA8AAAAAAAQAAAAFABAAAAAAAAQAAAAFABEAAAAAAAQAAAAFABIAAAABAAQAAAAFABMAAAAAAAQAAAAFABQAAAABAAQAAAAFABUAAAABAAQAAAAFABYAAAAAAAQAAAAGAAAAAAACAAQAAAAGAAEAAAAAAAQAAAAGAAIAAAAAAAQAAAAGAAMAAAAAAAQAAAAGAAQAAAAAAAQAAAAGAAUAAAAAAAQAAAAGAAYAAAAAAAQAAAAGAAcAAAAAAAQAAAAGAAgAAAAAAAQAAAAGAAkAAAAAAAQAAAAGAAoAAAABAAQAAAAGAAsAAAAAAAQAAAAGAAwAAAABAAQAAAAGAA0AAAABAAQAAAAGAA4AAAABAAQAAAAGAA8AAAAAAAQAAAAGABAAAAAAAAQAAAAGABEAAAAAAAQAAAAGABIAAAAAAAQAAAAGABMAAAAAAAQAAAAGABQAAAADAAQAAAAGABUAAAAAAAQAAAAGABYAAAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAAAAAQAAAAHAAIAAAAAAAQAAAAHAAMAAAABAAQAAAAHAAQAAAAAAAQAAAAHAAUAAAAAAAQAAAAHAAYAAAAAAAQAAAAHAAcAAAABAAQAAAAHAAgAAAAAAAQAAAAHAAkAAAAAAAQAAAAHAAoAAAABAAQAAAAHAAsAAAAAAAQAAAAHAAwAAAAAAAQAAAAHAA0AAAAAAAQAAAAHAA4AAAAAAAQAAAAHAA8AAAABAAQAAAAHABAAAAAAAAQAAAAHABEAAAACAAQAAAAHABIAAAAAAAQAAAAHABMAAAAAAAQAAAAHABQAAAAAAAQAAAAHABUAAAAAAAQAAAAHABYAAAABAAQAAAAIAAAAAAAAAAQAAAAIAAEAAAACAAQAAAAIAAIAAAACAAQAAAAIAAMAAAAAAAQAAAAIAAQAAAAAAAQAAAAIAAUAAAAAAAQAAAAIAAYAAAAAAAQAAAAIAAcAAAAAAAQAAAAIAAgAAAAAAAQAAAAIAAkAAAAAAAQAAAAIAAoAAAABAAQAAAAIAAsAAAABAAQAAAAIAAwAAAACAAQAAAAIAA0AAAAAAAQAAAAIAA4AAAAAAAQAAAAIAA8AAAAAAAQAAAAIABAAAAAAAAQAAAAIABEAAAAAAAQAAAAIABIAAAAAAAQAAAAIABMAAAADAAQAAAAIABQAAAAAAAQAAAAIABUAAAAAAAQAAAAIABYAAAABAAQAAAAJAAAAAAAAAAQAAAAJAAEAAAAAAAQAAAAJAAIAAAAAAAQAAAAJAAMAAAABAAQAAAAJAAQAAAAAAAQAAAAJAAUAAAAAAAQAAAAJAAYAAAAAAAQAAAAJAAcAAAABAAQAAAAJAAgAAAABAAQAAAAJAAkAAAAAAAQAAAAJAAoAAAABAAQAAAAJAAsAAAAAAAQAAAAJAAwAAAABAAQAAAAJAA0AAAAAAAQAAAAJAA4AAAABAAQAAAAJAA8AAAABAAQAAAAJABAAAAACAAQAAAAJABEAAAAAAAQAAAAJABIAAAABAAQAAAAJABMAAAABAAQAAAAJABQAAAAAAAQAAAAJABUAAAAAAAQAAAAJABYAAAABAAQAAAAKAAAAAAAAAAQAAAAKAAEAAAAAAAQAAAAKAAIAAAAAAAQAAAAKAAMAAAAAAAQAAAAKAAQAAAAAAAQAAAAKAAUAAAAAAAQAAAAKAAYAAAABAAQAAAAKAAcAAAAAAAQAAAAKAAgAAAACAAQAAAAKAAkAAAADAAQAAAAKAAoAAAABAAQAAAAKAAsAAAABAAQAAAAKAAwAAAAAAAQAAAAKAA0AAAAAAAQAAAAKAA4AAAAAAAQAAAAKAA8AAAAAAAQAAAAKABAAAAAAAAQAAAAKABEAAAAAAAQAAAAKABIAAAAAAAQAAAAKABMAAAAAAAQAAAAKABQAAAAAAAQAAAAKABUAAAAAAAQAAAAKABYAAAAAAAQAAAALAAAAAAABAAQAAAALAAEAAAAAAAQAAAALAAIAAAABAAQAAAALAAMAAAAAAAQAAAALAAQAAAABAAQAAAALAAUAAAAAAAQAAAALAAYAAAACAAQAAAALAAcAAAAAAAQAAAALAAgAAAAAAAQAAAALAAkAAAAAAAQAAAALAAoAAAAAAAQAAAALAAsAAAAAAAQAAAALAAwAAAAAAAQAAAALAA0AAAAAAAQAAAALAA4AAAADAAQAAAALAA8AAAAAAAQAAAALABAAAAABAAQAAAALABEAAAAAAAQAAAALABIAAAAAAAQAAAALABMAAAABAAQAAAALABQAAAAAAAQAAAALABUAAAABAAQAAAALABYAAAAAAAQAAAAMAAAAAAAAAAQAAAAMAAEAAAABAAQAAAAMAAIAAAAAAAQAAAAMAAMAAAAAAAQAAAAMAAQAAAAAAAQAAAAMAAUAAAAAAAQAAAAMAAYAAAACAAQAAAAMAAcAAAABAAQAAAAMAAgAAAAAAAQAAAAMAAkAAAAAAAQAAAAMAAoAAAAAAAQAAAAMAAsAAAACAAQAAAAMAAwAAAAAAAQAAAAMAA0AAAABAAQAAAAMAA4AAAAAAAQAAAAMAA8AAAAAAAQAAAAMABAAAAAAAAQAAAAMABEAAAAAAAQAAAAMABIAAAABAAQAAAAMABMAAAAAAAQAAAAMABQAAAAAAAQAAAAMABUAAAABAAQAAAAMABYAAAABAAQAAAANAAAAAAABAAQAAAANAAEAAAAAAAQAAAANAAIAAAAAAAQAAAANAAMAAAACAAQAAAANAAQAAAAAAAQAAAANAAUAAAAAAAQAAAANAAYAAAABAAQAAAANAAcAAAADAAQAAAANAAgAAAAAAAQAAAANAAkAAAABAAQAAAANAAoAAAAAAAQAAAANAAsAAAAAAAQAAAANAAwAAAAAAAQAAAANAA0AAAAAAAQAAAANAA4AAAAAAAQAAAANAA8AAAABAAQAAAANABAAAAABAAQAAAANABEAAAAAAAQAAAANABIAAAABAAQAAAANABMAAAAAAAQAAAANABQAAAACAAQAAAANABUAAAABAAQAAAANABYAAAADAAQAAAAOAAAAAAAAAAQAAAAOAAEAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAMAAAAAAAQAAAAOAAQAAAAAAAQAAAAOAAUAAAABAAQAAAAOAAYAAAABAAQAAAAOAAcAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAkAAAABAAQAAAAOAAoAAAAAAAQAAAAOAAsAAAAAAAQAAAAOAAwAAAAAAAQAAAAOAA0AAAAAAAQAAAAOAA4AAAABAAQAAAAOAA8AAAAAAAQAAAAOABAAAAAAAAQAAAAOABEAAAAAAAQAAAAOABIAAAABAAQAAAAOABMAAAACAAQAAAAOABQAAAAAAAQAAAAOABUAAAAAAAQAAAAOABYAAAAAAAQAAAAPAAAAAAAAAAQAAAAPAAEAAAABAAQAAAAPAAIAAAABAAQAAAAPAAMAAAADAAQAAAAPAAQAAAAAAAQAAAAPAAUAAAAAAAQAAAAPAAYAAAABAAQAAAAPAAcAAAAAAAQAAAAPAAgAAAAAAAQAAAAPAAkAAAAAAAQAAAAPAAoAAAABAAQAAAAPAAsAAAAAAAQAAAAPAAwAAAABAAQAAAAPAA0AAAABAAQAAAAPAA4AAAAAAAQAAAAPAA8AAAAAAAQAAAAPABAAAAABAAQAAAAPABEAAAADAAQAAAAPABIAAAAAAAQAAAAPABMAAAAAAAQAAAAPABQAAAAAAAQAAAAPABUAAAAAAAQAAAAPABYAAAAAAAQAAAAQAAAAAAAAAAQAAAAQAAEAAAABAAQAAAAQAAIAAAAAAAQAAAAQAAMAAAABAAQAAAAQAAQAAAAAAAQAAAAQAAUAAAAAAAQAAAAQAAYAAAAAAAQAAAAQAAcAAAABAAQAAAAQAAgAAAACAAQAAAAQAAkAAAAAAAQAAAAQAAoAAAACAAQAAAAQAAsAAAAAAAQAAAAQAAwAAAAAAAQAAAAQAA0AAAAAAAQAAAAQAA4AAAAAAAQAAAAQAA8AAAAAAAQAAAAQABAAAAAAAAQAAAAQABEAAAAAAAQAAAAQABIAAAAAAAQAAAAQABMAAAAAAAQAAAAQABQAAAAAAAQAAAAQABUAAAABAAQAAAAQABYAAAAAAAQAAAARAAAAAAAAAAQAAAARAAEAAAAAAAQAAAARAAIAAAAAAAQAAAARAAMAAAAAAAQAAAARAAQAAAABAAQAAAARAAUAAAAAAAQAAAARAAYAAAAAAAQAAAARAAcAAAAAAAQAAAARAAgAAAAAAAQAAAARAAkAAAABAAQAAAARAAoAAAAAAAQAAAARAAsAAAAAAAQAAAARAAwAAAAAAAQAAAARAA0AAAABAAQAAAARAA4AAAAAAAQAAAARAA8AAAABAAQAAAARABAAAAAAAAQAAAARABEAAAAAAAQAAAARABIAAAAAAAQAAAARABMAAAAAAAQAAAARABQAAAAAAAQAAAARABUAAAABAAQAAAARABYAAAAAAAQAAAASAAAAAAAAAAQAAAASAAEAAAAAAAQAAAASAAIAAAAAAAQAAAASAAMAAAABAAQAAAASAAQAAAAAAAQAAAASAAUAAAAAAAQAAAASAAYAAAAAAAQAAAASAAcAAAAAAAQAAAASAAgAAAAAAAQAAAASAAkAAAABAAQAAAASAAoAAAAAAAQAAAASAAsAAAAAAAQAAAASAAwAAAAAAAQAAAASAA0AAAAAAAQAAAASAA4AAAAAAAQAAAASAA8AAAAAAAQAAAASABAAAAABAAQAAAASABEAAAAAAAQAAAASABIAAAAAAAQAAAASABMAAAAAAAQAAAASABQAAAAAAAQAAAASABUAAAAAAAQAAAASABYAAAAAAAQAAAATAAAAAAAAAAQAAAATAAEAAAAAAAQAAAATAAIAAAAAAAQAAAATAAMAAAAAAAQAAAATAAQAAAAAAAQAAAATAAUAAAAAAAQAAAATAAYAAAAAAAQAAAATAAcAAAAAAAQAAAATAAgAAAAAAAQAAAATAAkAAAAAAAQAAAATAAoAAAAAAAQAAAATAAsAAAAAAAQAAAATAAwAAAAAAAQAAAATAA0AAAAAAAQAAAATAA4AAAAAAAQAAAATAA8AAAAAAAQAAAATABAAAAAAAAQAAAATABEAAAAAAAQAAAATABIAAAAAAAQAAAATABMAAAAAAAQAAAATABQAAAAAAAQAAAATABUAAAAAAAQAAAATABYAAAAAAAQAAAAUAAAAAAABAAQAAAAUAAEAAAAAAAQAAAAUAAIAAAABAAQAAAAUAAMAAAAAAAQAAAAUAAQAAAAAAAQAAAAUAAUAAAAAAAQAAAAUAAYAAAAAAAQAAAAUAAcAAAAAAAQAAAAUAAgAAAAAAAQAAAAUAAkAAAAAAAQAAAAUAAoAAAABAAQAAAAUAAsAAAABAAQAAAAUAAwAAAAAAAQAAAAUAA0AAAAAAAQAAAAUAA4AAAAAAAQAAAAUAA8AAAAAAAQAAAAUABAAAAAAAAQAAAAUABEAAAAAAAQAAAAUABIAAAAAAAQAAAAUABMAAAAAAAQAAAAUABQAAAAAAAQAAAAUABUAAAAAAAQAAAAUABYAAAAAAAQAAAAVAAAAAAAAAAQAAAAVAAEAAAABAAQAAAAVAAIAAAAAAAQAAAAVAAMAAAAAAAQAAAAVAAQAAAAAAAQAAAAVAAUAAAAAAAQAAAAVAAYAAAAAAAQAAAAVAAcAAAAAAAQAAAAVAAgAAAACAAQAAAAVAAkAAAABAAQAAAAVAAoAAAABAAQAAAAVAAsAAAAAAAQAAAAVAAwAAAAAAAQAAAAVAA0AAAAAAAQAAAAVAA4AAAABAAQAAAAVAA8AAAAAAAQAAAAVABAAAAADAAQAAAAVABEAAAAAAAQAAAAVABIAAAAAAAQAAAAVABMAAAAAAAQAAAAVABQAAAAAAAQAAAAVABUAAAAAAAQAAAAVABYAAAABAAQAAAAWAAAAAAAAAAQAAAAWAAEAAAABAAQAAAAWAAIAAAAAAAQAAAAWAAMAAAABAAQAAAAWAAQAAAACAAQAAAAWAAUAAAAAAAQAAAAWAAYAAAABAAQAAAAWAAcAAAAAAAQAAAAWAAgAAAAAAAQAAAAWAAkAAAAAAAQAAAAWAAoAAAABAAQAAAAWAAsAAAAAAAQAAAAWAAwAAAAAAAQAAAAWAA0AAAAAAAQAAAAWAA4AAAAAAAQAAAAWAA8AAAABAAQAAAAWABAAAAAAAAQAAAAWABEAAAAAAAQAAAAWABIAAAABAAQAAAAWABMAAAABAAQAAAAWABQAAAAAAAQAAAAWABUAAAAAAAQAAAAWABYAAAAAAAQAAAAXAAAAAAAAAAQAAAAXAAEAAAAAAAQAAAAXAAIAAAAAAAQAAAAXAAMAAAAAAAQAAAAXAAQAAAACAAQAAAAXAAUAAAAAAAQAAAAXAAYAAAABAAQAAAAXAAcAAAAAAAQAAAAXAAgAAAADAAQAAAAXAAkAAAAAAAQAAAAXAAoAAAAAAAQAAAAXAAsAAAACAAQAAAAXAAwAAAAAAAQAAAAXAA0AAAAAAAQAAAAXAA4AAAABAAQAAAAXAA8AAAAAAAQAAAAXABAAAAAAAAQAAAAXABEAAAAAAAQAAAAXABIAAAAAAAQAAAAXABMAAAAAAAQAAAAXABQAAAAAAAQAAAAXABUAAAAAAAQAAAAXABYAAAABAAQAAAAYAAAAAAAAAAQAAAAYAAEAAAAAAAQAAAAYAAIAAAAAAAQAAAAYAAMAAAAAAAQAAAAYAAQAAAABAAQAAAAYAAUAAAABAAQAAAAYAAYAAAAAAAQAAAAYAAcAAAAAAAQAAAAYAAgAAAACAAQAAAAYAAkAAAAAAAQAAAAYAAoAAAAAAAQAAAAYAAsAAAAAAAQAAAAYAAwAAAAAAAQAAAAYAA0AAAAAAAQAAAAYAA4AAAAAAAQAAAAYAA8AAAABAAQAAAAYABAAAAAAAAQAAAAYABEAAAADAAQAAAAYABIAAAAAAAQAAAAYABMAAAAAAAQAAAAYABQAAAABAAQAAAAYABUAAAAAAAQAAAAYABYAAAAAAAQAAAAZAAAAAAAAAAQAAAAZAAEAAAAAAAQAAAAZAAIAAAAAAAQAAAAZAAMAAAABAAQAAAAZAAQAAAAAAAQAAAAZAAUAAAAAAAQAAAAZAAYAAAAAAAQAAAAZAAcAAAABAAQAAAAZAAgAAAABAAQAAAAZAAkAAAADAAQAAAAZAAoAAAAAAAQAAAAZAAsAAAAAAAQAAAAZAAwAAAACAAQAAAAZAA0AAAAAAAQAAAAZAA4AAAAAAAQAAAAZAA8AAAAAAAQAAAAZABAAAAABAAQAAAAZABEAAAAAAAQAAAAZABIAAAAAAAQAAAAZABMAAAAAAAQAAAAZABQAAAAAAAQAAAAZABUAAAAAAAQAAAAZABYAAAAAAAQAAAAaAAAAAAAAAAQAAAAaAAEAAAABAAQAAAAaAAIAAAACAAQAAAAaAAMAAAAAAAQAAAAaAAQAAAAAAAQAAAAaAAUAAAABAAQAAAAaAAYAAAABAAQAAAAaAAcAAAADAAQAAAAaAAgAAAAAAAQAAAAaAAkAAAABAAQAAAAaAAoAAAAAAAQAAAAaAAsAAAABAAQAAAAaAAwAAAAAAAQAAAAaAA0AAAABAAQAAAAaAA4AAAABAAQAAAAaAA8AAAABAAQAAAAaABAAAAAAAAQAAAAaABEAAAAAAAQAAAAaABIAAAAAAAQAAAAaABMAAAAAAAQAAAAaABQAAAABAAQAAAAaABUAAAAAAAQAAAAaABYAAAAAAAQAAAAbAAAAAAAAAAQAAAAbAAEAAAADAAQAAAAbAAIAAAAAAAQAAAAbAAMAAAAAAAQAAAAbAAQAAAAAAAQAAAAbAAUAAAABAAQAAAAbAAYAAAABAAQAAAAbAAcAAAABAAQAAAAbAAgAAAAAAAQAAAAbAAkAAAAAAAQAAAAbAAoAAAAAAAQAAAAbAAsAAAACAAQAAAAbAAwAAAAAAAQAAAAbAA0AAAABAAQAAAAbAA4AAAAAAAQAAAAbAA8AAAAAAAQAAAAbABAAAAADAAQAAAAbABEAAAAAAAQAAAAbABIAAAAAAAQAAAAbABMAAAAAAAQAAAAbABQAAAAAAAQAAAAbABUAAAAAAAQAAAAbABYAAAABAAQAAAAcAAAAAAABAAQAAAAcAAEAAAAAAAQAAAAcAAIAAAAAAAQAAAAcAAMAAAAAAAQAAAAcAAQAAAAAAAQAAAAcAAUAAAABAAQAAAAcAAYAAAAAAAQAAAAcAAcAAAAAAAQAAAAcAAgAAAAAAAQAAAAcAAkAAAAAAAQAAAAcAAoAAAAAAAQAAAAcAAsAAAAAAAQAAAAcAAwAAAAAAAQAAAAcAA0AAAAAAAQAAAAcAA4AAAAAAAQAAAAcAA8AAAAAAAQAAAAcABAAAAAAAAQAAAAcABEAAAAAAAQAAAAcABIAAAAAAAQAAAAcABMAAAAAAAQAAAAcABQAAAAAAAQAAAAcABUAAAAAAAQAAAAcABYAAAAAAAQAAAAdAAAAAAAAAAQAAAAdAAEAAAAAAAQAAAAdAAIAAAAAAAQAAAAdAAMAAAAAAAQAAAAdAAQAAAABAAQAAAAdAAUAAAAAAAQAAAAdAAYAAAADAAQAAAAdAAcAAAACAAQAAAAdAAgAAAAAAAQAAAAdAAkAAAAAAAQAAAAdAAoAAAAAAAQAAAAdAAsAAAAAAAQAAAAdAAwAAAAAAAQAAAAdAA0AAAAAAAQAAAAdAA4AAAABAAQAAAAdAA8AAAAAAAQAAAAdABAAAAAAAAQAAAAdABEAAAAAAAQAAAAdABIAAAAAAAQAAAAdABMAAAAAAAQAAAAdABQAAAABAAQAAAAdABUAAAABAAQAAAAdABYAAAAAAAQAAAAeAAAAAAAAAAQAAAAeAAEAAAAAAAQAAAAeAAIAAAABAAQAAAAeAAMAAAABAAQAAAAeAAQAAAAAAAQAAAAeAAUAAAAAAAQAAAAeAAYAAAAAAAQAAAAeAAcAAAAAAAQAAAAeAAgAAAAAAAQAAAAeAAkAAAABAAQAAAAeAAoAAAADAAQAAAAeAAsAAAABAAQAAAAeAAwAAAABAAQAAAAeAA0AAAAAAAQAAAAeAA4AAAABAAQAAAAeAA8AAAAAAAQAAAAeABAAAAAAAAQAAAAeABEAAAAAAAQAAAAeABIAAAAAAAQAAAAeABMAAAAAAAQAAAAeABQAAAAAAAQAAAAeABUAAAAAAAQAAAAeABYAAAAAAAQAAAAfAAAAAAAAAAQAAAAfAAEAAAAAAAQAAAAfAAIAAAAAAAQAAAAfAAMAAAAAAAQAAAAfAAQAAAACAAQAAAAfAAUAAAAAAAQAAAAfAAYAAAAAAAQAAAAfAAcAAAABAAQAAAAfAAgAAAAAAAQAAAAfAAkAAAABAAQAAAAfAAoAAAAAAAQAAAAfAAsAAAAAAAQAAAAfAAwAAAAAAAQAAAAfAA0AAAAAAAQAAAAfAA4AAAAAAAQAAAAfAA8AAAABAAQAAAAfABAAAAABAAQAAAAfABEAAAAAAAQAAAAfABIAAAAAAAQAAAAfABMAAAAAAAQAAAAfABQAAAAAAAQAAAAfABUAAAAAAAQAAAAfABYAAAAAAAQAAAAgAAAAAAAAAAQAAAAgAAEAAAAAAAQAAAAgAAIAAAABAAQAAAAgAAMAAAAAAAQAAAAgAAQAAAABAAQAAAAgAAUAAAAAAAQAAAAgAAYAAAAAAAQAAAAgAAcAAAABAAQAAAAgAAgAAAAAAAQAAAAgAAkAAAAAAAQAAAAgAAoAAAAAAAQAAAAgAAsAAAAAAAQAAAAgAAwAAAABAAQAAAAgAA0AAAAAAAQAAAAgAA4AAAAAAAQAAAAgAA8AAAAAAAQAAAAgABAAAAAAAAQAAAAgABEAAAAAAAQAAAAgABIAAAAAAAQAAAAgABMAAAAAAAQAAAAgABQAAAAAAAQAAAAgABUAAAAAAAQAAAAgABYAAAAAAAQAAAAhAAAAAAAAAAQAAAAhAAEAAAAAAAQAAAAhAAIAAAAAAAQAAAAhAAMAAAAAAAQAAAAhAAQAAAAAAAQAAAAhAAUAAAAAAAQAAAAhAAYAAAAAAAQAAAAhAAcAAAAAAAQAAAAhAAgAAAAAAAQAAAAhAAkAAAAAAAQAAAAhAAoAAAAAAAQAAAAhAAsAAAAAAAQAAAAhAAwAAAABAAQAAAAhAA0AAAAAAAQAAAAhAA4AAAAAAAQAAAAhAA8AAAAAAAQAAAAhABAAAAABAAQAAAAhABEAAAAAAAQAAAAhABIAAAAAAAQAAAAhABMAAAAAAAQAAAAhABQAAAABAAQAAAAhABUAAAABAAQAAAAhABYAAAAAAAQAAAAiAAAAAAAAAAQAAAAiAAEAAAAAAAQAAAAiAAIAAAAAAAQAAAAiAAMAAAAAAAQAAAAiAAQAAAAAAAQAAAAiAAUAAAADAAQAAAAiAAYAAAAAAAQAAAAiAAcAAAAAAAQAAAAiAAgAAAAAAAQAAAAiAAkAAAAAAAQAAAAiAAoAAAABAAQAAAAiAAsAAAAAAAQAAAAiAAwAAAAAAAQAAAAiAA0AAAAAAAQAAAAiAA4AAAABAAQAAAAiAA8AAAAAAAQAAAAiABAAAAACAAQAAAAiABEAAAAAAAQAAAAiABIAAAADAAQAAAAiABMAAAAAAAQAAAAiABQAAAAAAAQAAAAiABUAAAABAAQAAAAiABYAAAAAAAQAAAAjAAAAAAAAAAQAAAAjAAEAAAAAAAQAAAAjAAIAAAABAAQAAAAjAAMAAAAAAAQAAAAjAAQAAAABAAQAAAAjAAUAAAACAAQAAAAjAAYAAAABAAQAAAAjAAcAAAAAAAQAAAAjAAgAAAABAAQAAAAjAAkAAAAAAAQAAAAjAAoAAAABAAQAAAAjAAsAAAAAAAQAAAAjAAwAAAABAAQAAAAjAA0AAAABAAQAAAAjAA4AAAABAAQAAAAjAA8AAAAAAAQAAAAjABAAAAAAAAQAAAAjABEAAAAAAAQAAAAjABIAAAAAAAQAAAAjABMAAAAAAAQAAAAjABQAAAAAAAQAAAAjABUAAAAAAAQAAAAjABYAAAABAAQAAAAkAAAAAAAAAAQAAAAkAAEAAAAAAAQAAAAkAAIAAAABAAQAAAAkAAMAAAAAAAQAAAAkAAQAAAAAAAQAAAAkAAUAAAAAAAQAAAAkAAYAAAAAAAQAAAAkAAcAAAAAAAQAAAAkAAgAAAAAAAQAAAAkAAkAAAAAAAQAAAAkAAoAAAAAAAQAAAAkAAsAAAABAAQAAAAkAAwAAAAAAAQAAAAkAA0AAAAAAAQAAAAkAA4AAAABAAQAAAAkAA8AAAAAAAQAAAAkABAAAAAAAAQAAAAkABEAAAABAAQAAAAkABIAAAAAAAQAAAAkABMAAAAAAAQAAAAkABQAAAAAAAQAAAAkABUAAAAAAAQAAAAkABYAAAAAAAQAAAAlAAAAAAAAAAQAAAAlAAEAAAAAAAQAAAAlAAIAAAAAAAQAAAAlAAMAAAAAAAQAAAAlAAQAAAAAAAQAAAAlAAUAAAAAAAQAAAAlAAYAAAAAAAQAAAAlAAcAAAAAAAQAAAAlAAgAAAABAAQAAAAlAAkAAAAAAAQAAAAlAAoAAAAAAAQAAAAlAAsAAAAAAAQAAAAlAAwAAAAAAAQAAAAlAA0AAAADAAQAAAAlAA4AAAACAAQAAAAlAA8AAAABAAQAAAAlABAAAAAAAAQAAAAlABEAAAABAAQAAAAlABIAAAACAAQAAAAlABMAAAABAAQAAAAlABQAAAAAAAQAAAAlABUAAAAAAAQAAAAlABYAAAAAAAQAAAAmAAAAAAAAAAQAAAAmAAEAAAAAAAQAAAAmAAIAAAAAAAQAAAAmAAMAAAAAAAQAAAAmAAQAAAAAAAQAAAAmAAUAAAAAAAQAAAAmAAYAAAAAAAQAAAAmAAcAAAAAAAQAAAAmAAgAAAAAAAQAAAAmAAkAAAAAAAQAAAAmAAoAAAABAAQAAAAmAAsAAAABAAQAAAAmAAwAAAAAAAQAAAAmAA0AAAAAAAQAAAAmAA4AAAAAAAQAAAAmAA8AAAABAAQAAAAmABAAAAAAAAQAAAAmABEAAAABAAQAAAAmABIAAAAAAAQAAAAmABMAAAAAAAQAAAAmABQAAAAAAAQAAAAmABUAAAABAAQAAAAmABYAAAAAAAQAAAAnAAAAAAAAAAQAAAAnAAEAAAAAAAQAAAAnAAIAAAAAAAQAAAAnAAMAAAAAAAQAAAAnAAQAAAAAAAQAAAAnAAUAAAAAAAQAAAAnAAYAAAACAAQAAAAnAAcAAAAAAAQAAAAnAAgAAAAAAAQAAAAnAAkAAAAAAAQAAAAnAAoAAAAAAAQAAAAnAAsAAAAAAAQAAAAnAAwAAAAAAAQAAAAnAA0AAAABAAQAAAAnAA4AAAAAAAQAAAAnAA8AAAAAAAQAAAAnABAAAAAAAAQAAAAnABEAAAAAAAQAAAAnABIAAAAAAAQAAAAnABMAAAABAAQAAAAnABQAAAAAAAQAAAAnABUAAAAAAAQAAAAnABYAAAAAAAQAAAAoAAAAAAAAAAQAAAAoAAEAAAAAAAQAAAAoAAIAAAAAAAQAAAAoAAMAAAAAAAQAAAAoAAQAAAAAAAQAAAAoAAUAAAAAAAQAAAAoAAYAAAAAAAQAAAAoAAcAAAAAAAQAAAAoAAgAAAAAAAQAAAAoAAkAAAAAAAQAAAAoAAoAAAAAAAQAAAAoAAsAAAAAAAQAAAAoAAwAAAAAAAQAAAAoAA0AAAAAAAQAAAAoAA4AAAAAAAQAAAAoAA8AAAAAAAQAAAAoABAAAAAAAAQAAAAoABEAAAABAAQAAAAoABIAAAAAAAQAAAAoABMAAAAAAAQAAAAoABQAAAACAAQAAAAoABUAAAAAAAQAAAAoABYAAAAAAAQAAAAAABcAAAAAAAQAAAAAABgAAAABAAQAAAAAABkAAAAAAAQAAAAAABoAAAAAAAQAAAAAABsAAAAAAAQAAAAAABwAAAAAAAQAAAAAAB0AAAAAAAQAAAAAAB4AAAAAAAQAAAAAAB8AAAAAAAQAAAABABcAAAAAAAQAAAABABgAAAABAAQAAAABABkAAAAAAAQAAAABABoAAAAAAAQAAAABABsAAAAAAAQAAAABABwAAAAAAAQAAAABAB0AAAAAAAQAAAABAB4AAAADAAQAAAABAB8AAAAAAAQAAAACABcAAAABAAQAAAACABgAAAACAAQAAAACABkAAAAAAAQAAAACABoAAAAAAAQAAAACABsAAAAAAAQAAAACABwAAAAAAAQAAAACAB0AAAAAAAQAAAACAB4AAAAAAAQAAAACAB8AAAABAAQAAAADABcAAAADAAQAAAADABgAAAAAAAQAAAADABkAAAAAAAQAAAADABoAAAAAAAQAAAADABsAAAAAAAQAAAADABwAAAAAAAQAAAADAB0AAAABAAQAAAADAB4AAAAAAAQAAAADAB8AAAAAAAQAAAAEABcAAAAAAAQAAAAEABgAAAABAAQAAAAEABkAAAABAAQAAAAEABoAAAACAAQAAAAEABsAAAAAAAQAAAAEABwAAAAAAAQAAAAEAB0AAAAAAAQAAAAEAB4AAAACAAQAAAAEAB8AAAAAAAQAAAAFABcAAAAAAAQAAAAFABgAAAAAAAQAAAAFABkAAAAAAAQAAAAFABoAAAAAAAQAAAAFABsAAAABAAQAAAAFABwAAAAAAAQAAAAFAB0AAAABAAQAAAAFAB4AAAAAAAQAAAAFAB8AAAAAAAQAAAAGABcAAAABAAQAAAAGABgAAAAAAAQAAAAGABkAAAABAAQAAAAGABoAAAABAAQAAAAGABsAAAAAAAQAAAAGABwAAAABAAQAAAAGAB0AAAABAAQAAAAGAB4AAAAAAAQAAAAGAB8AAAAAAAQAAAAHABcAAAABAAQAAAAHABgAAAADAAQAAAAHABkAAAAAAAQAAAAHABoAAAAAAAQAAAAHABsAAAAAAAQAAAAHABwAAAAAAAQAAAAHAB0AAAAAAAQAAAAHAB4AAAABAAQAAAAHAB8AAAAAAAQAAAAIABcAAAABAAQAAAAIABgAAAAAAAQAAAAIABkAAAAAAAQAAAAIABoAAAADAAQAAAAIABsAAAAAAAQAAAAIABwAAAABAAQAAAAIAB0AAAAAAAQAAAAIAB4AAAAAAAQAAAAIAB8AAAAAAAQAAAAJABcAAAAAAAQAAAAJABgAAAAAAAQAAAAJABkAAAAAAAQAAAAJABoAAAAAAAQAAAAJABsAAAAAAAQAAAAJABwAAAABAAQAAAAJAB0AAAACAAQAAAAJAB4AAAABAAQAAAAJAB8AAAABAAQAAAAKABcAAAAAAAQAAAAKABgAAAAAAAQAAAAKABkAAAAAAAQAAAAKABoAAAAAAAQAAAAKABsAAAAAAAQAAAAKABwAAAABAAQAAAAKAB0AAAABAAQAAAAKAB4AAAAAAAQAAAAKAB8AAAAAAAQAAAALABcAAAABAAQAAAALABgAAAABAAQAAAALABkAAAABAAQAAAALABoAAAAAAAQAAAALABsAAAADAAQAAAALABwAAAAAAAQAAAALAB0AAAAAAAQAAAALAB4AAAAAAAQAAAALAB8AAAABAAQAAAAMABcAAAAAAAQAAAAMABgAAAADAAQAAAAMABkAAAAAAAQAAAAMABoAAAAAAAQAAAAMABsAAAAAAAQAAAAMABwAAAACAAQAAAAMAB0AAAAAAAQAAAAMAB4AAAAAAAQAAAAMAB8AAAAAAAQAAAANABcAAAAAAAQAAAANABgAAAAAAAQAAAANABkAAAAAAAQAAAANABoAAAAAAAQAAAANABsAAAAAAAQAAAANABwAAAABAAQAAAANAB0AAAAAAAQAAAANAB4AAAACAAQAAAANAB8AAAAAAAQAAAAOABcAAAAAAAQAAAAOABgAAAAAAAQAAAAOABkAAAAAAAQAAAAOABoAAAAAAAQAAAAOABsAAAAAAAQAAAAOABwAAAAAAAQAAAAOAB0AAAAAAAQAAAAOAB4AAAAAAAQAAAAOAB8AAAAAAAQAAAAPABcAAAAAAAQAAAAPABgAAAABAAQAAAAPABkAAAAAAAQAAAAPABoAAAAAAAQAAAAPABsAAAAAAAQAAAAPABwAAAACAAQAAAAPAB0AAAAAAAQAAAAPAB4AAAAAAAQAAAAPAB8AAAABAAQAAAAQABcAAAAAAAQAAAAQABgAAAAAAAQAAAAQABkAAAAAAAQAAAAQABoAAAAAAAQAAAAQABsAAAAAAAQAAAAQABwAAAAAAAQAAAAQAB0AAAABAAQAAAAQAB4AAAAAAAQAAAAQAB8AAAAAAAQAAAARABcAAAAAAAQAAAARABgAAAAAAAQAAAARABkAAAAAAAQAAAARABoAAAAAAAQAAAARABsAAAAAAAQAAAARABwAAAAAAAQAAAARAB0AAAAAAAQAAAARAB4AAAAAAAQAAAARAB8AAAAAAAQAAAASABcAAAAAAAQAAAASABgAAAAAAAQAAAASABkAAAAAAAQAAAASABoAAAAAAAQAAAASABsAAAAAAAQAAAASABwAAAAAAAQAAAASAB0AAAAAAAQAAAASAB4AAAAAAAQAAAASAB8AAAAAAAQAAAATABcAAAABAAQAAAATABgAAAAAAAQAAAATABkAAAAAAAQAAAATABoAAAAAAAQAAAATABsAAAABAAQAAAATABwAAAAAAAQAAAATAB0AAAAAAAQAAAATAB4AAAACAAQAAAATAB8AAAABAAQAAAAUABcAAAAAAAQAAAAUABgAAAABAAQAAAAUABkAAAAAAAQAAAAUABoAAAAAAAQAAAAUABsAAAAAAAQAAAAUABwAAAAAAAQAAAAUAB0AAAAAAAQAAAAUAB4AAAAAAAQAAAAUAB8AAAABAAQAAAAVABcAAAAAAAQAAAAVABgAAAAAAAQAAAAVABkAAAAAAAQAAAAVABoAAAAAAAQAAAAVABsAAAABAAQAAAAVABwAAAAAAAQAAAAVAB0AAAAAAAQAAAAVAB4AAAAAAAQAAAAVAB8AAAABAAQAAAAWABcAAAAAAAQAAAAWABgAAAAAAAQAAAAWABkAAAAAAAQAAAAWABoAAAAAAAQAAAAWABsAAAABAAQAAAAWABwAAAAAAAQAAAAWAB0AAAAAAAQAAAAWAB4AAAAAAAQAAAAWAB8AAAAAAAQAAAAXABcAAAABAAQAAAAXABgAAAABAAQAAAAXABkAAAAAAAQAAAAXABoAAAABAAQAAAAXABsAAAAAAAQAAAAXABwAAAAAAAQAAAAXAB0AAAAAAAQAAAAXAB4AAAAAAAQAAAAXAB8AAAAAAAQAAAAYABcAAAAAAAQAAAAYABgAAAAAAAQAAAAYABkAAAAAAAQAAAAYABoAAAABAAQAAAAYABsAAAAAAAQAAAAYABwAAAAAAAQAAAAYAB0AAAABAAQAAAAYAB4AAAABAAQAAAAYAB8AAAAAAAQAAAAZABcAAAAAAAQAAAAZABgAAAABAAQAAAAZABkAAAAAAAQAAAAZABoAAAAAAAQAAAAZABsAAAAAAAQAAAAZABwAAAAAAAQAAAAZAB0AAAAAAAQAAAAZAB4AAAACAAQAAAAZAB8AAAAAAAQAAAAaABcAAAAAAAQAAAAaABgAAAAAAAQAAAAaABkAAAAAAAQAAAAaABoAAAABAAQAAAAaABsAAAACAAQAAAAaABwAAAACAAQAAAAaAB0AAAAAAAQAAAAaAB4AAAAAAAQAAAAaAB8AAAAAAAQAAAAbABcAAAABAAQAAAAbABgAAAAAAAQAAAAbABkAAAAAAAQAAAAbABoAAAAAAAQAAAAbABsAAAADAAQAAAAbABwAAAABAAQAAAAbAB0AAAADAAQAAAAbAB4AAAADAAQAAAAbAB8AAAAAAAQAAAAcABcAAAAAAAQAAAAcABgAAAAAAAQAAAAcABkAAAAAAAQAAAAcABoAAAAAAAQAAAAcABsAAAAAAAQAAAAcABwAAAAAAAQAAAAcAB0AAAAAAAQAAAAcAB4AAAAAAAQAAAAcAB8AAAAAAAQAAAAdABcAAAABAAQAAAAdABgAAAAAAAQAAAAdABkAAAACAAQAAAAdABoAAAAAAAQAAAAdABsAAAAAAAQAAAAdABwAAAACAAQAAAAdAB0AAAAAAAQAAAAdAB4AAAAAAAQAAAAdAB8AAAABAAQAAAAeABcAAAAAAAQAAAAeABgAAAAAAAQAAAAeABkAAAAAAAQAAAAeABoAAAAAAAQAAAAeABsAAAAAAAQAAAAeABwAAAAAAAQAAAAeAB0AAAAAAAQAAAAeAB4AAAAAAAQAAAAeAB8AAAAAAAQAAAAfABcAAAAAAAQAAAAfABgAAAAAAAQAAAAfABkAAAABAAQAAAAfABoAAAAAAAQAAAAfABsAAAAAAAQAAAAfABwAAAAAAAQAAAAfAB0AAAAAAAQAAAAfAB4AAAAAAAQAAAAfAB8AAAAAAAQAAAAgABcAAAAAAAQAAAAgABgAAAABAAQAAAAgABkAAAAAAAQAAAAgABoAAAADAAQAAAAgABsAAAABAAQAAAAgABwAAAAAAAQAAAAgAB0AAAABAAQAAAAgAB4AAAAAAAQAAAAgAB8AAAAAAAQAAAAhABcAAAAAAAQAAAAhABgAAAABAAQAAAAhABkAAAAAAAQAAAAhABoAAAAAAAQAAAAhABsAAAABAAQAAAAhABwAAAAAAAQAAAAhAB0AAAAAAAQAAAAhAB4AAAAAAAQAAAAhAB8AAAAAAAQAAAAiABcAAAAAAAQAAAAiABgAAAAAAAQAAAAiABkAAAABAAQAAAAiABoAAAAAAAQAAAAiABsAAAAAAAQAAAAiABwAAAAAAAQAAAAiAB0AAAAAAAQAAAAiAB4AAAABAAQAAAAiAB8AAAACAAQAAAAjABcAAAAAAAQAAAAjABgAAAAAAAQAAAAjABkAAAAAAAQAAAAjABoAAAAAAAQAAAAjABsAAAADAAQAAAAjABwAAAACAAQAAAAjAB0AAAABAAQAAAAjAB4AAAAAAAQAAAAjAB8AAAAAAAQAAAAkABcAAAAAAAQAAAAkABgAAAAAAAQAAAAkABkAAAAAAAQAAAAkABoAAAAAAAQAAAAkABsAAAAAAAQAAAAkABwAAAABAAQAAAAkAB0AAAAAAAQAAAAkAB4AAAAAAAQAAAAkAB8AAAAAAAQAAAAlABcAAAABAAQAAAAlABgAAAAAAAQAAAAlABkAAAABAAQAAAAlABoAAAABAAQAAAAlABsAAAAAAAQAAAAlABwAAAACAAQAAAAlAB0AAAAAAAQAAAAlAB4AAAAAAAQAAAAlAB8AAAABAAQAAAAmABcAAAAAAAQAAAAmABgAAAADAAQAAAAmABkAAAABAAQAAAAmABoAAAAAAAQAAAAmABsAAAAAAAQAAAAmABwAAAAAAAQAAAAmAB0AAAABAAQAAAAmAB4AAAAAAAQAAAAmAB8AAAAAAAQAAAAnABcAAAAAAAQAAAAnABgAAAABAAQAAAAnABkAAAAAAAQAAAAnABoAAAAAAAQAAAAnABsAAAAAAAQAAAAnABwAAAABAAQAAAAnAB0AAAAAAAQAAAAnAB4AAAABAAQAAAAnAB8AAAABAAQAAAAoABcAAAABAAQAAAAoABgAAAAAAAQAAAAoABkAAAABAAQAAAAoABoAAAAAAAQAAAAoABsAAAAAAAQAAAAoABwAAAABAAQAAAAoAB0AAAAAAAQAAAAoAB4AAAAAAAQAAAAoAB8AAAAAAAQAAAApAAAAAAABAAQAAAApAAEAAAAAAAQAAAApAAIAAAACAAQAAAApAAMAAAABAAQAAAApAAQAAAABAAQAAAApAAUAAAABAAQAAAApAAYAAAAAAAQAAAApAAcAAAABAAQAAAApAAgAAAAAAAQAAAApAAkAAAAAAAQAAAApAAoAAAAAAAQAAAApAAsAAAAAAAQAAAApAAwAAAAAAAQAAAApAA0AAAADAAQAAAApAA4AAAAAAAQAAAApAA8AAAAAAAQAAAApABAAAAAAAAQAAAApABEAAAABAAQAAAApABIAAAABAAQAAAApABMAAAABAAQAAAApABQAAAAAAAQAAAApABUAAAAAAAQAAAApABYAAAAAAAQAAAApABcAAAAAAAQAAAApABgAAAAAAAQAAAApABkAAAAAAAQAAAApABoAAAAAAAQAAAApABsAAAABAAQAAAApABwAAAAAAAQAAAApAB0AAAAAAAQAAAApAB4AAAAAAAQAAAApAB8AAAAAAAQAAAAqAAAAAAAAAAQAAAAqAAEAAAABAAQAAAAqAAIAAAAAAAQAAAAqAAMAAAAAAAQAAAAqAAQAAAAAAAQAAAAqAAUAAAAAAAQAAAAqAAYAAAAAAAQAAAAqAAcAAAAAAAQAAAAqAAgAAAAAAAQAAAAqAAkAAAAAAAQAAAAqAAoAAAAAAAQAAAAqAAsAAAAAAAQAAAAqAAwAAAAAAAQAAAAqAA0AAAAAAAQAAAAqAA4AAAAAAAQAAAAqAA8AAAAAAAQAAAAqABAAAAADAAQAAAAqABEAAAABAAQAAAAqABIAAAACAAQAAAAqABMAAAAAAAQAAAAqABQAAAAAAAQAAAAqABUAAAAAAAQAAAAqABYAAAAAAAQAAAAqABcAAAAAAAQAAAAqABgAAAAAAAQAAAAqABkAAAACAAQAAAAqABoAAAABAAQAAAAqABsAAAAAAAQAAAAqABwAAAAAAAQAAAAqAB0AAAAAAAQAAAAqAB4AAAABAAQAAAAqAB8AAAAAAAQAAAArAAAAAAAAAAQAAAArAAEAAAAAAAQAAAArAAIAAAAAAAQAAAArAAMAAAAAAAQAAAArAAQAAAAAAAQAAAArAAUAAAAAAAQAAAArAAYAAAACAAQAAAArAAcAAAAAAAQAAAArAAgAAAABAAQAAAArAAkAAAABAAQAAAArAAoAAAABAAQAAAArAAsAAAAAAAQAAAArAAwAAAAAAAQAAAArAA0AAAAAAAQAAAArAA4AAAABAAQAAAArAA8AAAAAAAQAAAArABAAAAAAAAQAAAArABEAAAAAAAQAAAArABIAAAAAAAQAAAArABMAAAADAAQAAAArABQAAAADAAQAAAArABUAAAAAAAQAAAArABYAAAAAAAQAAAArABcAAAAAAAQAAAArABgAAAABAAQAAAArABkAAAAAAAQAAAArABoAAAAAAAQAAAArABsAAAACAAQAAAArABwAAAACAAQAAAArAB0AAAAAAAQAAAArAB4AAAABAAQAAAArAB8AAAAAAAQAAAAsAAAAAAADAAQAAAAsAAEAAAADAAQAAAAsAAIAAAABAAQAAAAsAAMAAAAAAAQAAAAsAAQAAAABAAQAAAAsAAUAAAAAAAQAAAAsAAYAAAAAAAQAAAAsAAcAAAAAAAQAAAAsAAgAAAABAAQAAAAsAAkAAAAAAAQAAAAsAAoAAAAAAAQAAAAsAAsAAAAAAAQAAAAsAAwAAAABAAQAAAAsAA0AAAABAAQAAAAsAA4AAAAAAAQAAAAsAA8AAAAAAAQAAAAsABAAAAAAAAQAAAAsABEAAAAAAAQAAAAsABIAAAAAAAQAAAAsABMAAAAAAAQAAAAsABQAAAABAAQAAAAsABUAAAAAAAQAAAAsABYAAAAAAAQAAAAsABcAAAAAAAQAAAAsABgAAAAAAAQAAAAsABkAAAACAAQAAAAsABoAAAABAAQAAAAsABsAAAAAAAQAAAAsABwAAAABAAQAAAAsAB0AAAAAAAQAAAAsAB4AAAAAAAQAAAAsAB8AAAABAAQAAAAtAAAAAAAAAAQAAAAtAAEAAAAAAAQAAAAtAAIAAAABAAQAAAAtAAMAAAAAAAQAAAAtAAQAAAAAAAQAAAAtAAUAAAAAAAQAAAAtAAYAAAAAAAQAAAAtAAcAAAAAAAQAAAAtAAgAAAABAAQAAAAtAAkAAAACAAQAAAAtAAoAAAAAAAQAAAAtAAsAAAABAAQAAAAtAAwAAAAAAAQAAAAtAA0AAAAAAAQAAAAtAA4AAAAAAAQAAAAtAA8AAAAAAAQAAAAtABAAAAAAAAQAAAAtABEAAAAAAAQAAAAtABIAAAAAAAQAAAAtABMAAAAAAAQAAAAtABQAAAAAAAQAAAAtABUAAAAAAAQAAAAtABYAAAAAAAQAAAAtABcAAAABAAQAAAAtABgAAAAAAAQAAAAtABkAAAAAAAQAAAAtABoAAAABAAQAAAAtABsAAAAAAAQAAAAtABwAAAAAAAQAAAAtAB0AAAAAAAQAAAAtAB4AAAAAAAQAAAAtAB8AAAAAAAQAAAAuAAAAAAABAAQAAAAuAAEAAAAAAAQAAAAuAAIAAAAAAAQAAAAuAAMAAAAAAAQAAAAuAAQAAAAAAAQAAAAuAAUAAAAAAAQAAAAuAAYAAAACAAQAAAAuAAcAAAADAAQAAAAuAAgAAAAAAAQAAAAuAAkAAAAAAAQAAAAuAAoAAAABAAQAAAAuAAsAAAAAAAQAAAAuAAwAAAAAAAQAAAAuAA0AAAAAAAQAAAAuAA4AAAAAAAQAAAAuAA8AAAAAAAQAAAAuABAAAAAAAAQAAAAuABEAAAAAAAQAAAAuABIAAAAAAAQAAAAuABMAAAADAAQAAAAuABQAAAABAAQAAAAuABUAAAAAAAQAAAAuABYAAAAAAAQAAAAuABcAAAAAAAQAAAAuABgAAAAAAAQAAAAuABkAAAAAAAQAAAAuABoAAAAAAAQAAAAuABsAAAAAAAQAAAAuABwAAAAAAAQAAAAuAB0AAAAAAAQAAAAuAB4AAAAAAAQAAAAuAB8AAAAAAAQAAAAvAAAAAAABAAQAAAAvAAEAAAAAAAQAAAAvAAIAAAAAAAQAAAAvAAMAAAAAAAQAAAAvAAQAAAAAAAQAAAAvAAUAAAAAAAQAAAAvAAYAAAAAAAQAAAAvAAcAAAAAAAQAAAAvAAgAAAABAAQAAAAvAAkAAAABAAQAAAAvAAoAAAABAAQAAAAvAAsAAAAAAAQAAAAvAAwAAAAAAAQAAAAvAA0AAAAAAAQAAAAvAA4AAAAAAAQAAAAvAA8AAAADAAQAAAAvABAAAAAAAAQAAAAvABEAAAAAAAQAAAAvABIAAAAAAAQAAAAvABMAAAAAAAQAAAAvABQAAAABAAQAAAAvABUAAAAAAAQAAAAvABYAAAAAAAQAAAAvABcAAAAAAAQAAAAvABgAAAADAAQAAAAvABkAAAAAAAQAAAAvABoAAAAAAAQAAAAvABsAAAAAAAQAAAAvABwAAAAAAAQAAAAvAB0AAAAAAAQAAAAvAB4AAAABAAQAAAAvAB8AAAAAAAQAAAAwAAAAAAAAAAQAAAAwAAEAAAAAAAQAAAAwAAIAAAAAAAQAAAAwAAMAAAADAAQAAAAwAAQAAAACAAQAAAAwAAUAAAAAAAQAAAAwAAYAAAAAAAQAAAAwAAcAAAACAAQAAAAwAAgAAAABAAQAAAAwAAkAAAADAAQAAAAwAAoAAAABAAQAAAAwAAsAAAAAAAQAAAAwAAwAAAACAAQAAAAwAA0AAAAAAAQAAAAwAA4AAAAAAAQAAAAwAA8AAAAAAAQAAAAwABAAAAAAAAQAAAAwABEAAAACAAQAAAAwABIAAAAAAAQAAAAwABMAAAAAAAQAAAAwABQAAAABAAQAAAAwABUAAAAAAAQAAAAwABYAAAAAAAQAAAAwABcAAAAAAAQAAAAwABgAAAAAAAQAAAAwABkAAAAAAAQAAAAwABoAAAAAAAQAAAAwABsAAAADAAQAAAAwABwAAAAAAAQAAAAwAB0AAAAAAAQAAAAwAB4AAAAAAAQAAAAwAB8AAAAAAAQAAAA=")
tile_set = ExtResource("2_5vafy")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Vampaire Surviors"

[node name="PlayButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="UpgradesButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrades"

[node name="OptionButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Option"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -142.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_hiibk")
expand_mode = 1
stretch_mode = 5

[node name="CheckButton" type="CheckButton" parent="."]
offset_right = 38.0
offset_bottom = 24.0
